Simplify Update Mechanism